--- a/Workshop HTML/assets/css/style.css
+++ b/Workshop HTML/assets/css/style.css
@@ -138,6 +138,131 @@ html {
 
 /* Mobile*/
 
+@media screen and (max-width: 480px) {
+
+/* CONTAINER PRINCIPAL */   
+
+.main-container{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+}   
+
+.main-header{
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.main-header-logo-container{
+    margin: 45px 0px 91px 0px;
+
+}
+
+/* ARTICLE CONTAINER  */
+.article-container{
+    flex-basis: 574px;
+    /* flex: 2 4; */
+    display: flex;
+    flex-direction: column;
+}
+
+.article-container-team-header{
+    flex-basis: 100%;
+    /* margin: 30px 0; */
+    padding: 30px 17px;
+    color:#A1AEB7;
+    font-family: "Open Sans", sans-serif;
+    
+}
+
+.article-container__section-title{
+    text-align: center;
+    line-height: 54px;
+    font-weight: normal;
+    margin: 0 auto;
+    color: #A1AEB7;
+    font-size: 35px;
+}
+
+.article-container__section-subtitle h3{
+    text-align: left;
+    line-height: 40px;
+    font-weight: bold;
+    font-size: 18px;
+    color: #A1AEB7;
+    margin: 45px 0px 14px 17px;
+    text-transform: uppercase;
+}
+
+#section-subtitle-proposta{
+    margin: 6px 0px 14px 17px;
+
+}
+.article-container__section-subtitle p{
+    font-size: 16px;
+    text-align: left;
+    color: #A1AEB7;
+    font-weight: normal;
+    line-height: 1.5em;
+    margin: 14px 31px 14px 17px;
+
+}
+
+
+
+/* Scrool Team*/
+.article-container-team{
+    flex-basis: 97%;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    margin-top: 5px;
+    justify-content: space-between;
+
+   
+}
+
+.article-container-team section{
+    opacity: 0.7;
+    margin-bottom: 30px;
+    text-align: center;
+    /* flex-basis: 31%; */
+}
+
+.article-container-team section p {
+   margin-top:15px;
+   margin-bottom: 10px;
+}
+
+
+.article-container-team section span a {
+    color: #A1AEB7;
+    padding: 5px;
+    margin-top:20px;
+}
+
+
+/* FOOTER */
+.main-footer{
+    display: inline-block;
+    /* margin: 5% 20% ; */
+    margin: 20px 70px;
+    padding: 0px;
+    
+}
+
+.main-footer span a{
+  color: #A1AEB7;
+  text-decoration: none;  
+  flex: 1;
+  margin:3px;
+}
+
+
+    
+}
+
 
 
 
